# carp

./: .gitignore  Cargo.toml  LICENSE  UHO_8moves.pgn  convert_pgn.py  datagen.bat  ideas.txt  makefile  readme.MD  release_notes.MD
.cargo/: config.toml
.github/workflows/: build.yml  build_release.yml  release.yml  rust.yml  test.yml
artifacts/: release_notes.md
carp/: Cargo.toml  build.rs
carp-tools/: Cargo.toml
carp-tools/src/: datagen.rs  main.rs  merge.rs
carp/src/: bench.rs  clock.rs  lib.rs  main.rs  move_picker.rs  position.rs  search.rs  search_params.rs  search_tables.rs  thread.rs  tt.rs  uci.rs
carp/src/syzygy/: bindings.rs  probe.rs
chess/: Cargo.toml  build.rs
chess/build_deps/: hoppers.rs  magics.rs  masks.rs  mod.rs  sliders.rs  types.rs
chess/src/: bitboard.rs  board.rs  castle.rs  lib.rs  move_list.rs  moves.rs  piece.rs  square.rs  zobrist.rs
chess/src/board/: gen.rs  magics.rs  perft.rs
chess/src/movegen/: gen.rs  magics.rs  make_move.rs  mod.rs
chess/src/nnue/: mod.rs  nnue_history.txt
chess/src/tables/: attacks.rs  constants.rs  magics.rs  mod.rs
engine/: Cargo.toml  build.rs
engine/src/: clock.rs  lib.rs  main.rs  move_picker.rs  position.rs  search.rs  search_params.rs  search_tables.rs  thread.rs
engine/src/nnue/: convert_json.py  mod.rs
engine/src/syzygy/: bindings.rs  probe.rs
scripts/: carp0000.json  convert_json.py  convert_pgn.py  datagen.bat  test.sh
scripts/books/: UHO_8moves.pgn
src/: bitboard.rs  board.rs  board_repr.rs  castle.rs  castling_rights.rs  clock.rs  color.rs  evaluation.rs  lib.rs  main.rs  move_list.rs  move_order.rs  move_sorter.rs  moves.rs  piece.rs  position.rs  search.rs  search_params.rs  sorter.rs  square.rs  tt.rs  uci.rs  zobrist.rs
src/chess/: bitboard.rs  board.rs  castle.rs  mod.rs  move_list.rs  moves.rs  piece.rs  square.rs  zobrist.rs
src/chess/tables/: attacks.rs  constants.rs  magics.rs  mod.rs
src/engine/: bench.rs  clock.rs  history_table.rs  mod.rs  move_picker.rs  move_sorter.rs  position.rs  search.rs  search_info.rs  search_params.rs  search_tables.rs  thread.rs  tt.rs  uci.rs
src/engine/nnue/: convert_json.py  mod.rs  nnue_history.txt  nnue_notes.txt
src/nnue/: mod.rs  nnue_history.txt  nnue_notes.txt
src/tables/: attacks.rs  constants.rs  customize.rs  find_magics.rs  magics.rs  mod.rs  rng.rs
src/tools/: bench.rs  datagen.rs  merge.rs  mod.rs
src/uci/: bench.rs  engine.rs  mod.rs
test/: test.sh
test/old/: carp_v1.2.0
tests/: perft.rs  search.rs
tools/: Cargo.toml
tools/src/: datagen.rs  main.rs  merge.rs
