[package]
name = "carp"
version = "2.0.0"
edition = "2021"
authors = ["Andrea Sgobbi"]
description = "A didactic chess engine written in Rust."
license = "GPL-3.0"
readme = "readme.md"
keywords = ["chess"]
categories = ["games"]
repository = "https://github.com/dede1751/carp"

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"

[features]
tools = ["dep:clap", "dep:chrono", "dep:fastrand", "dep:ctrlc"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"], optional = true }
chrono = { version = "0.4", optional = true }
fastrand = { version = "1.9.0", optional = true }
ctrlc = { version = "3.2.5", optional = true }