[package]
name = "engine"
version = "3.0.1"
edition = "2021"
authors = ["Andrea Sgobbi"]
description = "A didactic chess engine written in Rust."
license = "GPL-3.0"
readme = "readme.md"
keywords = ["chess"]
categories = ["games"]
repository = "https://github.com/dede1751/carp"

[lib]
doctest = false

[dependencies]
chess = { path = "../chess" }

[features]
datagen = []
syzygy = ["dep:cc", "dep:bindgen"]

[build-dependencies]
cc = { version = "1.0.73", optional = true }
bindgen = { version = "0.65.1", optional = true }
